--- a/app/src/main/res/layout/course_list_layout.xml
+++ b/app/src/main/res/layout/course_list_layout.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingTop="10dp">
@@ -13,7 +15,6 @@
         android:layout_marginRight="5dp"
         android:background="@drawable/course_button"
         android:backgroundTint="#ffcccc"
-        android:drawableBottom="@drawable/ic_science"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
         android:paddingRight="10dp"
@@ -30,4 +31,12 @@
         android:cursorVisible="false"
         android:text="TextView"
         android:visibility="invisible" />
+
+    <ImageView
+        android:id="@+id/courseImg"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="50dp"
+        tools:srcCompat="@tools:sample/avatars" />
 </RelativeLayout>
